fix: alignement du hamburger menu mobile (trois traits)

--- a/themes/sarfrance-theme/static/css/style.css
+++ b/themes/sarfrance-theme/static/css/style.css
@@ -215,6 +215,7 @@ a:hover {
     border: none;
     cursor: pointer;
     padding: 10px;
+    flex-shrink: 0;
 }
 
 .hamburger {
@@ -230,6 +231,7 @@ a:hover {
 .hamburger::after {
     content: '';
     position: absolute;
+    left: 0;
     width: 25px;
     height: 3px;
     background-color: var(--navy-blue);
